k8s/rollout-local.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: searchapi
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: searchapi
  template:
    metadata:
      labels:
        app: searchapi
        app.kubernetes.io/instance: searchapi
        app.kubernetes.io/name: searchapi
    spec:
      containers:
        - name: searchapi
          image: "searchapi:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: searchapi
      previewService: searchapi-preview
      autoPromotionEnabled: false
      previewReplicaCount: 3
      scaleDownDelaySeconds: 300
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: web
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        app.kubernetes.io/instance: web
        app.kubernetes.io/name: web
    spec:
      containers:
        - name: web
          image: "web:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
  strategy:
    blueGreen:
      activeService: web
      previewService: web-preview
      autoPromotionEnabled: false
      previewReplicaCount: 3
      scaleDownDelaySeconds: 300
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: statsapi
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: statsapi
  template:
    metadata:
      labels:
        app: statsapi
        app.kubernetes.io/instance: statsapi
        app.kubernetes.io/name: statsapi
    spec:
      containers:
        - name: statsapi
          image: "statsapi:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: statsapi
      previewService: statsapi-preview
      autoPromotionEnabled: false
      previewReplicaCount: 3
      scaleDownDelaySeconds: 300
