k8s/searchapi-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: searchapi-rollout
  namespace: ${NAMESPACE}
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: searchapi
  template:
    metadata:
      labels:
        app: searchapi
    spec:
      containers:
        - name: searchapi
          image: ${ECR_REGISTRY}/searchapi:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  strategy:
    blueGreen:
      activeService: searchapi
      previewService: searchapi-preview
      autoPromotionEnabled: false
      previewReplicaCount: 3
      scaleDownDelaySeconds: 300
