k8s/web-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: web-rollout
  namespace: ${NAMESPACE}
spec:
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ${ECR_REGISTRY}/web:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: ${CONTAINER_PORT}
  strategy:
    blueGreen:
      activeService: web
      previewService: web-preview
      autoPromotionEnabled: false
      previewReplicaCount: 3
      scaleDownDelaySeconds: 300
