k8s/searchapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: searchapi
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: searchapi
---
apiVersion: v1
kind: Service
metadata:
  name: searchapi-preview
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: searchapi
