k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
    app.kubernetes.io/instance: web
    app.kubernetes.io/name: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: web
---
apiVersion: v1
kind: Service
metadata:
  name: web-preview
  labels:
    app: web
    app.kubernetes.io/instance: web
    app.kubernetes.io/name: web
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: web
