k8s/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: qa
spec:
  ingressClassName: nginx
  rules:
    - host: qa.localhost
      http:
        paths:
          - path: /search
            pathType: Exact
            backend:
              service:
                name: searchapi
                port:
                  number: 8080
          - path: /crawl
            pathType: Exact
            backend:
              service:
                name: searchapi
                port:
                  number: 8080
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: statsapi
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: uat
spec:
  ingressClassName: nginx
  rules:
    - host: uat.localhost
      http:
        paths:
          - path: /search
            pathType: Exact
            backend:
              service:
                name: searchapi
                port:
                  number: 8080
          - path: /crawl
            pathType: Exact
            backend:
              service:
                name: searchapi
                port:
                  number: 8080
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: statsapi
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /search
            pathType: Exact
            backend:
              service:
                name: searchapi
                port:
                  number: 8080
          - path: /crawl
            pathType: Exact
            backend:
              service:
                name: searchapi
                port:
                  number: 8080
          - path: /stats
            pathType: Prefix
            backend:
              service:
                name: statsapi
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
